--- a/login.html
+++ b/login.html
@@ -184,7 +184,7 @@
   </div>
 
  <script src="firebase.js"></script>
-  <script src="auth.js"></script>
+ <script type="module" src="auth.js"></script>
 
 </body>
 </html>
