--- a/login.html
+++ b/login.html
@@ -183,7 +183,7 @@
     </div>
   </div>
 
- <script src="firebase.js"></script>
+ <script type="module" src="firebase.js"></script>
  <script type="module" src="auth.js"></script>
 
 </body>
