--- a/login.html
+++ b/login.html
@@ -129,7 +129,7 @@
       <div id="statusBox" class="status" style="display:none;"></div>
 
       <div id="form-signin">
-        <form onsubmit="event.preventDefault(); signIn();">
+        <form id="form-signin">
           <label for="si-email">Email</label>
           <input id="si-email" type="email" required />
           <label for="si-password">Password</label>
