--- a/survey.html
+++ b/survey.html
@@ -5,6 +5,10 @@
   <title>Investment Survey</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+<script>
+  emailjs.init("4hsonTXZXG2i5mlX5");
+</script>
 </head>
 <body class="bg-gradient-to-br from-green-400 to-indigo-600 min-h-screen flex items-center justify-center p-4">
   <div class="bg-white rounded-xl shadow-xl p-6 w-full max-w-2xl">
