--- a/survey.html
+++ b/survey.html
@@ -35,8 +35,8 @@
             </div>
 
             <div class="space-y-1 sm:space-y-2">
-                <label class="block text-xs sm:text-sm font-medium text-gray-700">જન્મ તારીખ <span class="text-red-500">*</span></label>
-                <input id="dob" name="dob" type="date" 
+                <label class="block text-xs sm:text-sm font-medium text-gray-700">ઉંમર<span class="text-red-500">*</span></label>
+                <input id="dob" name="dob" type="number" max="120" min="0"
                     class="w-full px-3 sm:px-4 py-2 sm:py-3 text-sm sm:text-base border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-all duration-200 hover:border-gray-400">
             </div>
 
@@ -170,7 +170,7 @@
             <svg class="w-4 h-4 sm:w-5 sm:h-5 mr-2 text-blue-600" fill="currentColor" viewBox="0 0 20 20">
                 <path d="M4 4a2 2 0 00-2 2v1h16V6a2 2 0 00-2-2H4zM18 9H2v5a2 2 0 002 2h12a2 2 0 002-2V9zM4 13a1 1 0 011-1h1a1 1 0 110 2H5a1 1 0 01-1-1zm5-1a1 1 0 100 2h1a1 1 0 100-2H9z"></path>
             </svg>
-            પેન્શન સંબંધિત પ્રશ્નો
+            પેન્શન/નિવૃત્તિ સંબંધિત પ્રશ્નો
         </h2>
 
         <div class="space-y-4 sm:space-y-6">
